# django-letsmaintain

./: .pyup.yml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  python-package.yml
letsmaintain/: __init__.py  apps.py  middleware.py
letsmaintain/tests/: __init__.py  test_middleware.py
test_setup/: __init__.py  requirements.txt  settings.py  urls.py
